Sat May 27 16:49:33 2000  George Lebl <jirka@5z.com>

	* applet.c: when removing an applet, kill the applet in an idle.
	  This is so that events are processed and when a "destroy" happens
	  on the menu it happens before it is finalized by killing the
	  applet.  Fixes the flurry of recent bugs with 1.2.

2000-05-23  Dan Mueth <d-mueth@uchicago.edu>

	* panel.hints: Fixed typo in ending tag: </Content> was </content>.
	This completely broke the panel.hints file, so gnome-hint only
	would show the one hint hard-coded into gnome-hint.c. 

2000-05-23  Jacob Berkman  <jacob@helixcode.com>

	* panel.c (panel_destroy): don't go into the unexplored territory
	that is the negative ref count.  Wait for GTK 1.4 for that.

	* basep-widget.c (basep_widget_destroy): make this a little less
	ugly

2000-05-22  Fellmann Joaquim <joaquim@hrnet.fr>

	* panel.hints: Updated French translations.

2000-05-21  Dan Mueth <d-mueth@uchicago.edu>

	* panel.hints: Updated URL references to refer to new www.gnome.org
	web page which should go live before 1.2 goes out (ie very soon!).
	I did this for the translations too.

2000-05-21  Dan Mueth <d-mueth@uchicago.edu>

	* help/C/figures/panel_run*.png: Updated screenshots to use correct
	Gtk+ theme, as directed by James M. Cape <jcape@jcinteractive.com>.

2000-05-21  Karl Eichwalder  <ke@suse.de>

	* panel.hints: Improve German translation.

2000-05-20  Dan Mueth <d-mueth@uchicago.edu>

	* panel.hints: Fixed bad formatting of a couple hints.
	* panel.hints: Fixed bad wording of a couple hints which were pointed
	out by translators.

2000-05-19  Dan Mueth <d-mueth@uchicago.edu>

	* panel/help/C/panel.sgml: Finished first round of editing.

2000-05-19  Andreas Hyden  <a.hyden@cyberpoint.se>

	* panel.hints: Added Swedish translation.

2000-05-19  Kjartan Maraas  <kmaraas@gnu.org>

	* panel.hints: Adjusted and finished Norwegian translations.
	
Thu May 18 22:26:22 2000  George Lebl <jirka@5z.com>
