@@ -1,3 +1,9 @@
+Tue May 30 03:01:43 2000  George Lebl <jirka@5z.com>
+
+	* basep-widget.c: drawers are always in the "DOCK" layer.  even if
+	  we keep panels below windows.  Having the drawers be below windows
+	  makes no sense.
+
 Sat May 27 16:49:33 2000  George Lebl <jirka@5z.com>
 
 	* applet.c: when removing an applet, kill the applet in an idle.
